; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-io/src/extr_io.c_mrb_io_s_for_fd.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-io/src/extr_io.c_mrb_io_s_for_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RClass = type { i32 }
%struct.RObject = type { i32 }

@MRB_TT_OBJECT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mrb_io_s_for_fd(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.RClass*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.RClass* @mrb_class_ptr(i32 %8)
  store %struct.RClass* %9, %struct.RClass** %5, align 8
  %10 = load %struct.RClass*, %struct.RClass** %5, align 8
  %11 = call i32 @MRB_INSTANCE_TT(%struct.RClass* %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @MRB_TT_OBJECT, align 4
  store i32 %15, i32* %6, align 4
  br label %16

16:                                               ; preds = %14, %2
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load %struct.RClass*, %struct.RClass** %5, align 8
  %20 = call i64 @mrb_obj_alloc(i32* %17, i32 %18, %struct.RClass* %19)
  %21 = inttoptr i64 %20 to %struct.RObject*
  %22 = call i32 @mrb_obj_value(%struct.RObject* %21)
  store i32 %22, i32* %7, align 4
  %23 = load i32*, i32** %3, align 8
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @mrb_io_initialize(i32* %23, i32 %24)
  ret i32 %25
}

declare dso_local %struct.RClass* @mrb_class_ptr(i32) #1

declare dso_local i32 @MRB_INSTANCE_TT(%struct.RClass*) #1

declare dso_local i32 @mrb_obj_value(%struct.RObject*) #1

declare dso_local i64 @mrb_obj_alloc(i32*, i32, %struct.RClass*) #1

declare dso_local i32 @mrb_io_initialize(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
